--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
           @apply rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600;
         }
         .add-item-btn {
-          @apply col-span-2 rounded-md bg-blue-600 px-3 py-4 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600;
+          @apply col-span-2 rounded-md bg-blue-600 px-3 py-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600;
+        }
+        .form-row {
+          @apply lg:col-span-3 col-span-1 max-sm:mb-2;
         }
       }
     </style>
@@ -24,17 +27,17 @@
     <div class="bg-white">
       <div class="mx-auto max-w-7xl px-4 py-8 sm:px-6 sm:py-8 lg:px-8">
         <div class="mx-auto max-w-2xl">
-          <form>
+          <form onsubmit="handleSubmit()">
             <div class="border-b border-gray-900/10 pb-12">
               <div
-                class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6"
+                class="mt-10 lg:grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6"
               >
                 <h2
-                  class="text-base font-semibold leading-7 text-gray-900 col-span-full"
+                  class="text-base font-semibold leading-7 text-gray-900 col-span-full max-sm:mb-2"
                 >
                   Customer Details
                 </h2>
-                <div class="sm:col-span-3">
+                <div class="form-row">
                   <label
                     for="first-name"
                     class="block text-sm font-medium leading-6 text-gray-900"
@@ -45,13 +48,14 @@
                       type="text"
                       name="first-name"
                       id="first-name"
+                      required
                       autocomplete="given-name"
                       class="input"
                     />
                   </div>
                 </div>
 
-                <div class="sm:col-span-3">
+                <div class="form-row">
                   <label
                     for="last-name"
                     class="block text-sm font-medium leading-6 text-gray-900"
@@ -62,13 +66,14 @@
                       type="text"
                       name="last-name"
                       id="last-name"
+                      required
                       autocomplete="family-name"
                       class="input"
                     />
                   </div>
                 </div>
 
-                <div class="sm:col-span-3">
+                <div class="form-row">
                   <label
                     for="Email"
                     class="block text-sm font-medium leading-6 text-gray-900"
@@ -77,17 +82,17 @@
                   >
                   <div class="mt-2">
                     <input
-                      type="text"
-                      name="first-name"
-                      id="first-name"
-                      autocomplete="given-name"
+                      type="email"
+                      name="email"
+                      id="email"
+                      autocomplete="email"
                       required
                       class="input"
                     />
                   </div>
                 </div>
 
-                <div class="sm:col-span-3">
+                <div class="form-row">
                   <label
                     for="phone"
                     class="block text-sm font-medium leading-6 text-gray-900"
@@ -96,7 +101,7 @@
                   >
                   <div class="mt-2">
                     <input
-                      type="text"
+                      type="tel"
                       name="phone"
                       id="phone"
                       required
@@ -115,6 +120,7 @@
                     <input
                       type="text"
                       name="street-address"
+                      required
                       id="street-address"
                       autocomplete="street-address"
                       class="input"
@@ -122,7 +128,7 @@
                   </div>
                 </div>
 
-                <div class="sm:col-span-2 sm:col-start-1">
+                <div class="sm:col-span-2 sm:col-start-1 max-sm:mb-2">
                   <label
                     for="city"
                     class="block text-sm font-medium leading-6 text-gray-900"
@@ -133,13 +139,14 @@
                       type="text"
                       name="city"
                       id="city"
-                      autocomplete="address-level2"
+                      required
+                      autocomplete="city"
                       class="input"
                     />
                   </div>
                 </div>
 
-                <div class="sm:col-span-2">
+                <div class="sm:col-span-2 max-sm:mb-2">
                   <label
                     for="region"
                     class="block text-sm font-medium leading-6 text-gray-900"
@@ -148,15 +155,16 @@
                   <div class="mt-2">
                     <input
                       type="text"
-                      name="region"
-                      id="region"
-                      autocomplete="address-level1"
+                      name="state"
+                      id="state"
+                      required
+                      autocomplete="state"
                       class="input"
                     />
                   </div>
                 </div>
 
-                <div class="sm:col-span-2">
+                <div class="sm:col-span-2 max-sm:mb-2">
                   <label
                     for="postal-code"
                     class="block text-sm font-medium leading-6 text-gray-900"
@@ -167,6 +175,7 @@
                       type="text"
                       name="postal-code"
                       id="postal-code"
+                      required
                       autocomplete="postal-code"
                       class="input"
                     />
@@ -177,24 +186,25 @@
                 >
                   Order Details
                 </h2>
-                <div class="sm:col-span-2 sm:col-start-1">
+                <div class="sm:col-span-2 sm:col-start-1 max-sm:mb-2">
                   <label
-                    for="city"
+                    for="item"
                     class="block text-sm font-medium leading-6 text-gray-900"
                     >Item</label
                   >
                   <div class="mt-2">
                     <input
                       type="text"
-                      name="city"
-                      id="city"
-                      autocomplete="address-level2"
+                      name="item"
+                      required
+                      id="item"
+                      autocomplete="item"
                       class="input"
                     />
                   </div>
                 </div>
 
-                <div class="sm:col-span-2">
+                <div class="sm:col-span-2 max-sm:mb-2">
                   <label
                     for="region"
                     class="block text-sm font-medium leading-6 text-gray-900"
@@ -204,15 +214,16 @@
                   <div class="mt-2">
                     <input
                       type="text"
-                      name="region"
-                      id="region"
-                      autocomplete="address-level1"
+                      name="brand"
+                      required
+                      id="brand"
+                      autocomplete="brand"
                       class="input"
                     />
                   </div>
                 </div>
 
-                <div class="sm:col-span-2">
+                <div class="sm:col-span-2 max-sm:mb-2">
                   <label
                     for="postal-code"
                     class="block text-sm font-medium leading-6 text-gray-900"
@@ -220,15 +231,15 @@
                   </label>
                   <div class="mt-2">
                     <input
-                      type="text"
-                      name="postal-code"
-                      id="postal-code"
-                      autocomplete="postal-code"
+                      type="number"
+                      name="qty"
+                      id="qty"
+                      required
+                      autocomplete="qty"
                       class="input"
                     />
                   </div>
                 </div>
-                <button type="submit" class="add-item-btn">+ Add Item</button>
               </div>
             </div>
 
@@ -239,5 +250,34 @@
         </div>
       </div>
     </div>
+    <script>
+      function handleSubmit() {
+        // Perform validation here
+        if (validateForm()) {
+          return true; // Allow form submission
+          alert("Submitted successfully!");
+        } else {
+          return false; // Prevent form submission if validation fails
+        }
+      }
+
+      function validateForm() {
+        const firstName = document.getElementById("first-name").value;
+        const lastName = document.getElementById("last-name").value;
+        const email = document.getElementById("email").value;
+        const phone = document.getElementById("phone").value;
+
+        if (
+          firstName === "" ||
+          lastName === "" ||
+          email === "" ||
+          phone === ""
+        ) {
+          alert("Please fill in all required fields.");
+          return false;
+        }
+        return true;
+      }
+    </script>
   </body>
 </html>
